# trn-gcp-ai-contract-analyzer

./: .gitignore  README.md
.github/workflows/: deploy.yml  lint.yml
backend/: .env.example  .gcloudignore  dev.sh  main.py  pyproject.toml  rag.py
backend/policies/: adatvedelem.md  fizetesi-feltetelek.md
frontend/: .gcloudignore  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
scripts/: setup-wif.sh  setup.sh  teardown-wif.sh  teardown.sh
